// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders correctly 1`] = `
<div
  class="Tabs Tabs--primary"
>
  <div
    class="TabsBar"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiTabs-root"
      >
        <div
          class="MuiTabs-scrollable"
          style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
        />
        <div
          class="MuiTabs-scroller MuiTabs-scrollable"
          style="margin-bottom: 0px;"
        >
          <div
            aria-label="tabs"
            class="MuiTabs-flexContainer"
            role="tablist"
          >
            <button
              aria-controls="tabpanel-0"
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected"
              id="tab-0"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper"
              >
                Tab 1
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-controls="tabpanel-1"
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary"
              id="tab-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper"
              >
                Tab 2
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-1 PrivateTabIndicator-colorPrimary-2 MuiTabs-indicator"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="tab-0"
    heading="Tab 1"
    id="tabpanel-0"
    role="tabpanel"
  >
    <div
      class="MuiBox-root MuiBox-root-5 TabPanelBox"
    >
      Content One
    </div>
  </div>
  <div
    aria-labelledby="tab-1"
    heading="Tab 2"
    hidden=""
    id="tabpanel-1"
    role="tabpanel"
  />
</div>
`;

exports[`Tabs component renders secondary theme correctly 1`] = `
<div
  class="Tabs Tabs--secondary"
>
  <div
    class="TabsBar"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiTabs-root"
      >
        <div
          class="MuiTabs-scrollable"
          style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
        />
        <div
          class="MuiTabs-scroller MuiTabs-scrollable"
          style="margin-bottom: 0px;"
        >
          <div
            aria-label="tabs"
            class="MuiTabs-flexContainer"
            role="tablist"
          >
            <button
              aria-controls="tabpanel-0"
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected"
              id="tab-0"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper"
              >
                Tab 1
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-controls="tabpanel-1"
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary"
              id="tab-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper"
              >
                Tab 2
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-6 PrivateTabIndicator-colorPrimary-7 MuiTabs-indicator"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="tab-0"
    heading="Tab 1"
    id="tabpanel-0"
    role="tabpanel"
  >
    <div
      class="MuiBox-root MuiBox-root-10 TabPanelBox"
    >
      Content One
    </div>
  </div>
  <div
    aria-labelledby="tab-1"
    heading="Tab 2"
    hidden=""
    id="tabpanel-1"
    role="tabpanel"
  />
</div>
`;
